--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,119 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261578706917586%22%3A%22yVduG0uS%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "datr",
+        "value": "1Vt-aEJqVgn6MaKXIfiOEEZU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "sb",
+        "value": "1lt-aJjU-ocn6yvFtxtkzyRR",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61578706917586",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "xs",
+        "value": "12%3AfhSEMgq_MJoO0g%3A2%3A1753111528%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "pas",
+        "value": "61578706917586%3ARkb5JRijtp",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B750x384x1.875",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "fr",
+        "value": "0GLVC5ZfwR5WRbK3i.AWe7XCIvBoeLukm3yexAbfF2ecSSgcJ6Mf4XkkTxLva6r9hg2D0.BoflvW..AAA.0.0.Bofl-3.AWdTglR2CgZ10YVAIsA1cRrwtXE",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101721336%3BT%3A29218541",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2877%3Btimestamp%3A1753112503",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-21T15:43:58.795Z",
+        "lastAccessed": "2025-07-21T15:43:58.795Z"
+    }
+]
